--- a/style.css
+++ b/style.css
@@ -98,6 +98,9 @@ ion-icon{
             flex-direction: column;
             align-items: center;
             justify-content: space-between;
+            background-image: url(https://amyra123.github.io/landingPage/images/bg-desktop.svg);
+            background-repeat: no-repeat;
+            background-size: cover;
 
       }
 
